<resources>
    <string name="app_name">UsersDB</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="hint_user_full_name">User full name</string>
    <string name="hint_user_address">Address</string>
    <string name="hint_user_email">E-mail</string>
    <string name="hint_user_username">Username</string>
    <string name="hint_user_nationality">Nationality</string>
    <string name="action_add_user">Add user</string>
    <string name="btn_add_user">Add user</string>
</resources>
