<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kwygonjin.usersdb.ProfileActivity">

    <ImageView
        android:layout_width="144dp"
        android:layout_height="200dp"
        android:id="@+id/profile_user_image"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_user_full_name"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/profile_user_image"
        android:hint="@string/hint_user_full_name"
        android:layout_marginBottom="16dp"
        android:textSize="@dimen/profile_text_size"
        android:layout_alignTop="@+id/profile_user_image"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_address"
        android:layout_below="@+id/profile_user_full_name"
        android:layout_alignLeft="@+id/profile_user_full_name"
        android:layout_alignStart="@+id/profile_user_full_name"
        android:hint="@string/hint_user_address"
        android:textSize="@dimen/profile_text_size"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/profile_email"
        android:hint="@string/hint_user_email"
        android:textSize="@dimen/profile_text_size"
        android:layout_below="@+id/profile_address"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/profile_address"
        android:layout_alignStart="@+id/profile_address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_user_username"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/profile_user_image"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/profile_text_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_nationality"
        android:layout_below="@+id/profile_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_user_nationality"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/profile_text_size"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_user"
        android:id="@+id/btn_add_user"
        android:textSize="@dimen/profile_text_size"
        android:layout_below="@+id/profile_nationality"
        android:layout_centerHorizontal="true"
        android:onClick="addUserToDB" />

</RelativeLayout>
